feat: Admin UI 및 다양한 기능 개선
- Admin UI 추가 및 관련 기능 구현
- 문서 추가 및 업데이트
- 소스 코드 개선 및 리팩토링
- 빌드 설정 및 설정 파일 업데이트